--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "cfworker-middware-telegraf",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Make telegraf (a telegram bot framework) useable in Cloudflare Workers",
-  "main": "index.js",
+  "main": "src/index.js",
+  "exports": {
+    ".": "./src/index.js"
+  },
   "repository": "https://github.com/Tsuk1ko/cfworker-middware-telegraf",
   "author": "神代綺凜 <i@loli.best>",
   "license": "MIT",
@@ -15,12 +18,25 @@
     "telegram",
     "bot"
   ],
+  "files": [
+    "src"
+  ],
+  "scripts": {
+    "test": "webpack -c test/webpack.config.js"
+  },
   "devDependencies": {
-    "@cfworker/web": "^1.3.0",
-    "telegraf": "^3.38.0"
+    "@cfworker/web": "^1.12.0",
+    "dotenv": "^14.1.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
+    "telegraf": "^4.6.0",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1"
   },
   "peerDependencies": {
-    "@cfworker/web": "^1.3.0",
-    "telegraf": "^3.38.0"
+    "@cfworker/web": "^1.12.0",
+    "telegraf": "^4.6.0"
+  },
+  "dependencies": {
+    "abortcontroller-polyfill": "^1.7.3"
   }
 }
